--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,18 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Prod binary, built with `make`
+gorfbot
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# NixOS / direnv
+.envrc
+shell.nix
+
+# Local notes
+TODO.md
+
+# Local config
+config.yml
